# toolprac-crewai-project

./: .gitignore  README.md  pyproject.toml
knowledge/: user_preference.txt
src/toolprac/: crew.py  main.py
src/toolprac/config/: agents.yaml  tasks.yaml
src/toolprac/tools/: custom_tool.py  file_read_tool.py
